--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,6 +28,7 @@ subjects:
 - !lcsh 'Social problems'
 - !lcc 'PR'
 - !lcsh 'Great Britain -- Social conditions -- 19th century'
+- GITenberg
 title: 'Past and Present
 
   Thomas Carlyle''s Collected Works, Vol. XIII.'
